kubernetes/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moviestore-api
  namespace: moviestore
  labels:
    app: moviestore-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moviestore-api
  template:
    metadata:
      labels:
        app: moviestore-api
    spec:
      containers:
        - name: moviestore-api
          image: linayqb/rentalmovieapp-api:2.0.0
          ports:
            - containerPort: 8080
            - containerPort: 8081
          resources:
            requests:
              cpu: 200m
              memory: 300Mi
            limits:
              memory: 900Mi
