kubernetes/sqlserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
  namespace: moviestore
  labels:
    app: sqlserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      securityContext:
        fsGroup: 10001
      volumes:
        - name: mssql-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: sqlserver
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          resources:
            requests:
              cpu: 200m
              memory: 300Mi
            limits:
              memory: 900Mi
          volumeMounts:
            - name: mssql-storage
              mountPath: /var/opt/mssql/data
              subPath: mssql
