kubernetes/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moviestore-client
  namespace: moviestore
spec:
  type: ClusterIP
  selector:
    app: moviestore-client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
