kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moviestore
  namespace: moviestore
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /swagger/
            pathType: Prefix
            backend:
              service:
                name: moviestore-api
                port:
                  number: 8080
          - path: /grafana/
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moviestore-client
                port:
                  number: 3000
